[master] add server and client for serial example

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,11 @@ multiplexing/client/client
 multiplexing/client/client.exe
 multiplexing/server/server
 multiplexing/server/server.exe
-serial/client/client
-serial/client/client.exe
-serial/server/server
-serial/server/server.exe
+multiplexing_serial/client/client
+multiplexing_serial/client/client.exe
+multiplexing_serial/server/server
+multiplexing_serial/server/server.exe
+multiplexing_serial_grpc/client/client
+multiplexing_serial_grpc/client/client.exe
+multiplexing_serial_grpc/server/server
+multiplexing_serial_grpc/server/server.exe
