--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,11 @@ basic/grpc/server/server
 basic/grpc/client/client.exe
 basic/grpc/server/server.exe
 
+basic/remote_exec/client/client
+basic/remote_exec/server/server
+basic/remote_exec/client/client.exe
+basic/remote_exec/server/server.exe
+
 yamux_serial/client/client
 yamux_serial/client/client.exe
 yamux_serial/server/server
